# mafia

./: .coverage  .coveragerc  .gitignore  .prettierrc.json  AGENTS.md  ENGINE_MIGRATION_PLAN.md  README.md  REALTIME_MESSAGING_PLAN.md  TODO.md  eslint.config.base.mjs  package-lock.json  package.json  pyproject.toml  requirements.txt  spike.py  sst-env.d.ts  sst.config.ts  tree.py  vitest.config.mts
.opencode/: package-lock.json
.opencode/agents/: review.md
docs/game/: game-001-plan.md
docs/game/old-attempt/: GamePage.vue  game.js  game.py  game_controller.py  infra-step-functions-with-sstv2.js
docs/realtime/: reconnect-grace-period.md
infra/: api.ts  auth.ts  bus.ts  gameloop.ts  neon.ts  realtime.ts  web.ts
old/: pyproject.toml  requirements.txt  sst-env.d.ts  sst.config.ts  sst.pyi
old/stacks/: Api.ts  IoT.ts  settings.ts
scripts/: format.ts  index.ts  lint.ts
stacks/: Api.ts  Auth.ts  Events.ts  IoT.ts  LambdaLayers.ts  Site.ts  Spikes.ts  Storage.ts  settings.ts
